livekit 라이브러리 공부 및 생성 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
 livekit:
   api-key: APIW8s72Jf9nQ5S
   secret-key: Z6svQ2YQTlXS8q2Zk5LEUfhpVeP13FSxboE9GwsNVIE
-  URL: "wss://studytracking-4o27wuve.livekit.cloud"
+  URL: "https://studytracking-4o27wuve.livekit.cloud"
 
 
 jwt :
