--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.livekit:livekit-server:0.8.5'
+    implementation 'io.livekit:livekit-server:0.9.0'
+    implementation 'com.google.protobuf:protobuf-java:3.25.0'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
