--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: FSTTApiServer
+    name: ZyptApiServer
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
