--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,16 @@ repositories {
 dependencies {
     implementation 'io.livekit:livekit-server:0.9.0'
     implementation 'com.google.protobuf:protobuf-java:3.25.0'
+    implementation 'com.google.api-client:google-api-client:2.5.0'
+    implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
+    implementation 'com.google.http-client:google-http-client-gson:1.43.3' // GsonFactory용
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     compileOnly 'org.projectlombok:lombok'
 
     testCompileOnly 'org.projectlombok:lombok' // 테스트 의존성 추가
