--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,17 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.5.0'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
     implementation 'com.google.http-client:google-http-client-gson:1.43.3' // GsonFactory용
-
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
 
     testCompileOnly 'org.projectlombok:lombok' // 테스트 의존성 추가
     testAnnotationProcessor 'org.projectlombok:lombok' // 테스트 의존성 추가
