--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,12 +10,18 @@ spring:
 
 
   jpa:
-    hibernate:
-      ddl-auto: none # 테스트 시에는 보통 create-drop
-    show-sql: true
+
     properties:
       hibernate:
-        format_sql: true
+        show_sql: false
+        format_sql: false
+        jdbc:
+          batch_size: 1
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: none
+      # OSIV OFF
+    open-in-view: false
 
   # redis config
   data:
@@ -26,3 +32,15 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+
+mybatis:
+  type-aliases-package: zypt.zyptapiserver.domain
+  configuration:
+    map-underscore-to-camel-case: true
+
+logging:
+  level:
+    zypt:
+      zyptapiserver:
+        repository: info
+
