--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          
+      - name: Give execute permission to gradlew
+        run: chmod +x ./gradlew
+
 
       - name: Build JAR with Gradle
         run: ./gradlew clean bootJar -x test
