--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-mysql'
 
+    // uuidv7 사용
+    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
     //Querydsl 추가
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
