--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,5 +57,6 @@ jobs:
           script: |
             
             cd /home/${{ secrets.EC2_USER }}/zypt   # docker-compose.yml 있는 위치
+            docker login
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/zyptapi:latest
             docker-compose up -d --build
