--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.github.jk1.dependency-license-report' version '2.8'
 }
 
 group = 'Zypt'
@@ -21,6 +22,14 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+licenseReport {
+    renderers = [
+            new com.github.jk1.license.render.TextReportRenderer('THIRD-PARTY-LICENSES.txt')
+    ]
+    outputDir = "$projectDir/build/licenses"
+    // 필요시 제외/치환 규칙 추가 가능
 }
 
 dependencies {
